Fix jumbotron spacing on mobile devices

--- a/style.sass
+++ b/style.sass
@@ -220,6 +220,7 @@ li
       width: 100%
       #mesmer
         font-size: 2.5rem
+        word-spacing: -0.5rem
       #msb
         font-size: 1.2rem 
     footer
@@ -229,8 +230,6 @@ li
       .green-footer
         font-size: 0.3rem
         line-height: normal
-    .space
-    word-spacing: 0.1rem
     article
       margin: 0 auto
     .container
@@ -268,7 +267,6 @@ li
         margin-left: -2.5rem
         font-size: 1rem
         line-height: 2.5rem
-
   #happy 
     font-size: 1.5rem
   
